Cherry-pick r272927. rdar://problem/74500651

REGRESSION(r271515): ::marker fired at wrong time
    https://bugs.webkit.org/show_bug.cgi?id=221961
    <rdar://problem/74397846>

    Reviewed by Dean Jackson.

    Source/WebCore:

    Restore the order in which we generate CSS Animations for pseudo-elements as it was prior to r271515.

    * style/StyleTreeResolver.cpp:
    (WebCore::Style::TreeResolver::resolveElement):

    LayoutTests:

    Remove flakiness for this test since it didn't allow us to spot the regression introduced by r271515.

    * TestExpectations:

    Canonical link: https://commits.webkit.org/234160@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272927 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.216@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@273173 268f45cc-cd09-0410-ab3c-d52691b4dbfc